--- a/EissenhowerMatrixBackend/appsettings.json
+++ b/EissenhowerMatrixBackend/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost;Database=EissenhowerMatrix;Trusted_Connection=False;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=EissenhowerMatrix;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
