--- a/EissenhowerMatrixBackend/EissenhowerMatrixBackend.csproj
+++ b/EissenhowerMatrixBackend/EissenhowerMatrixBackend.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Scalar.AspNetCore" Version="2.6.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\Commands\Projects\" />
+  </ItemGroup>
+
 </Project>
