ADD delete project endpoint and filter out deleted from projects that get returned

--- a/EissenhowerMatrixBackend/Properties/launchSettings.json
+++ b/EissenhowerMatrixBackend/Properties/launchSettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "launchBrowser": true,
+  "launchUrl": "scalar",
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
